# recovery-economics

./: .gitignore  README.md  README.md.bak  pyproject.toml
artifacts/: README.md
evals/: README.md  test_ransomware_scenario.md
examples/: README.md  ransomware_compare.sh
memories/: README.md
recovery_economics/: aws_pricing.py  cli.py  cli.py.bak  cli.py.step1.bak  cli.py.step2.bak  cli.py.step3.bak  model.py
scenarios/: accidental_delete_production.yml  compliance_audit_restore.yml  ransomware_delayed_detection.yml  ransomware_fast_recovery.yml  region_failure_customer_facing.yml  region_outage_analytics.yml  test_restore_quarterly.yml
skills/: README.md  recovery-decision_SKILL.md
tests/: test_cli_analyze.py  test_cli_sensitivity.py  test_model.py
tests/fixtures/: missing_column.csv  non_numeric.csv  simple_config.csv
