[project]
name = "recovery-economics"
version = "0.1.0"
description = "A FinOps decision-stress model for cloud recovery economics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0"]

[project.scripts]
recovery-economics = "recovery_economics.cli:main"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]


